Sort people Id's in Trip on load.